<resources>
    <string name="app_name">My Application</string>
    <string name="garbo_logo_Main">Garbo Logo</string>
    <string name="welcome_to_xa">Welcome to \n</string>
    <string name="garbo">GARBO</string>
    <string name="skip">Skip</string>
    <string name="skip1">Skip...</string>
    <string name="your_companion_for_efficient_garbage_collection">Your companion for efficient garbage collection</string>
    <string name="garbo_simplifies_waste_management_with_these_features">Garbo simplifies waste management with these features:</string>
    <string name="smart_sorting_easily_sort_your_waste_into_recyclables_compost_and_trash">Smart Sorting: Easily sort your waste into recyclables, compost, and trash.</string>
    <string name="second">Pickup Scheduling: Schedule pickups at your convenience.</string>
    <string name="third">Reward System: Earn rewards for proper waste disposal and recycling.</string>
    <string name="next1">Next...</string>
    <string name="next2">Next...</string>
    <string name="listone">Garbo simplifies waste management with these features:</string>
    <string name="listtwo">Easily sort your waste into recyclables, compost, and trash.</string>
    <string name="listthree">Smart Sorting:</string>
    <string name="listfour">Pickup Scheduling:</string>
    <string name="listfive">Schedule pickups at your convenience.</string>
    <string name="listsix">Reward System:</string>
    <string name="listseven">Earn rewards for proper waste disposal and recycling.</string>
    <string name="garbage_pickup_scheduling">Garbage Pickup Scheduling</string>
    <string name="profile">Profile</string>
    <string name="reward">Reward</string>
    <string name="one">Garbage Pickup Scheduling</string>
    <string name="two">Waste Truck Tracking</string>
    <string name="three">Latest News and Updates</string>
    <string name="four">Recycles Programs</string>
    <string name="five">Environmental Awareness Campaigns</string>
    <string name="six">Sustainable Waste Management Practices</string>
    <string name="waste_truck_tracking">Waste Truck Tracking</string>
    <string name="text">Start making a difference today!</string>
    <string name="texttwo">Tap \'Get Started\' to join Garbo and take control of your waste.</string>
    <string name="get_started">Get Started</string>
    <string name="sign_up">SIGN UP</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="home_address">Home Address</string>
    <string name="muncipal_council">Muncipal Council</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="rules">Terms of Service Agreement</string>
    <string name="sign_in">Sign In</string>
    <string name="email_address_login">Email Address</string>
    <string name="password_login">Password</string>
    <string name="sign_in_login">Sign In</string>
    <string name="todo_des">TODO</string>
    <string name="todo1_des">TODO</string>
    <string name="todo_two">TODO</string>
    <string name="todo_three">TODO</string>
    <string name="todo_first">TODO</string>
    <string name="todo_second">TODO</string>
    <string name="todo_third">TODO</string>
    <string name="todo_fourth">TODO</string>
    <string name="todo_fifth">TODO</string>
    <string name="todo_sixth">TODO</string>
    <string name="todo_seventh">TODO</string>
    <string name="todo_eight">TODO</string>
    <string name="todo_ninth">TODO</string>
    <string name="contone">TODO</string>
    <string name="butone">TODO</string>
    <string name="buttwo">TODO</string>
    <string name="butthree">TODO</string>
    <string name="butfour">TODO</string>
    <string name="butfive">TODO</string>
    <string name="butsix">TODO</string>
    <string name="butseven">TODO</string>
    <string name="buteight">TODO</string>
    <string name="butnine">TODO</string>
    <string name="imgone">TODO</string>
    <string name="imgtwo">TODO</string>
    <string name="imgthree">TODO</string>
    <string name="imgones">TODO</string>
    <string name="imgtwos">TODO</string>
    <string name="imgthrees">TODO</string>
    <string name="imgfours">TODO</string>
    <string name="img_five">TODO</string>
    <string name="imgfives">TODO</string>
    <string name="button_des">TODO</string>
</resources>


